- Fixed editorconfig not catching Obsidian file changes.

--- a/.editorconfig
+++ b/.editorconfig
@@ -15,7 +15,7 @@ trim_trailing_whitespace = true
 indent_size = 2
 
 # JS
-[*.{js,ts}]
+[*.{js,ts,obs}]
 indent_size = 4
 insert_final_newline = true
 
