--- a/Rock/Rock.csproj
+++ b/Rock/Rock.csproj
@@ -1822,6 +1822,7 @@
     <Compile Include="Plugin\HotFixes\256_UpdateLearningNotificationCommunication.cs" />
     <Compile Include="Plugin\HotFixes\255_MigrationRollupsForV17_2_1.cs" />
     <Compile Include="Plugin\HotFixes\254_UpdateGoogleMapShortcode.cs" />
+    <Compile Include="Plugin\HotFixes\257_UpdateContentChannelInteractionComponentEntityTypeId.cs" />
     <Compile Include="Plugin\HotFixes\HotFixMigrationResource.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
